Change contents of index.html to have boxes with numbers in it

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
                 <p>5</p>
             </div> -->
         </div>
+        <a href="tea.html">Link to teas</a>
     </body>
 </html>
