--- a/index.html
+++ b/index.html
@@ -5,27 +5,19 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div class="background-card">
-            <div class="card" id="one">
-                <p>1</p>
+        <div class="container">
+            <div class="card-container">
+                <div class="card">1</div>
             </div>
-
-            <div class="card" id="two">
-                <p>2</p>
+            <div class="card-container">
+                <div class="card">1</div>
+    
+                <div class="card">2</div>
+    
+                <div class="card">3</div>
             </div>
-
-            <div class="card" id="three">
-                <p>3</p>
-            </div>
-
-            <!-- <div class="card" id="four">
-                <p>4</p>
-            </div>
-
-            <div class="card" id="five">
-                <p>5</p>
-            </div> -->
         </div>
+
         <a href="tea.html">Link to teas</a>
     </body>
 </html>
