Add grid section to index page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
             </div>
         </div>
 
+        <!-- Header is the parent element -->
+        <div class="header-container">
+            <div class="header">
+                <div class="header-item-1">Header Item 1</div>
+                <div class="header-item-2">Header Item 2</div>
+                <div class="header-item-3">Header Item 3</div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="grid">
+                <div class="grid-item item1"></div>
+                <div class="grid-item item2"></div>
+                <div class="grid-item item3"></div>
+                <div class="grid-item item4"></div>
+                <div class="grid-item item5"></div>
+                <div class="grid-item item6"></div>
+            </div>
+        </div>
+
         <a href="tea.html">Link to teas</a>
     </body>
 </html>
