--- a/tea.html
+++ b/tea.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Have a Cuppa' Tea Cafe</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/tea-styles.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="background-card">
+
+<head>
+    <title>Have a Cuppa' Tea Cafe</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/tea-styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+</head>
+
+<body>
+    <div class="container">
+        <!-- <div class="background-card">
                 <div class="card">
                     <h1>Green Tea</h1>
                     <img src="https://placedog.net/100/100/s" alt="a cup of tea">
@@ -26,7 +30,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor neque ut pellentesque lacinia. </p>
                     <p><span id="price">Price: </span>$4.77</p>
                 </div>
-            </div>
-        </div>
-    </body>
+            </div> -->
+    </div>
+</body>
+
 </html>
