--- a/tea.html
+++ b/tea.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <!-- <div class="background-card">
+        <div class="background-card">
                 <div class="card">
                     <h1>Green Tea</h1>
                     <img src="https://placedog.net/100/100/s" alt="a cup of tea">
@@ -30,7 +30,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor neque ut pellentesque lacinia. </p>
                     <p><span id="price">Price: </span>$4.77</p>
                 </div>
-            </div> -->
+            </div>
     </div>
 </body>
 
