--- a/tea.html
+++ b/tea.html
@@ -12,19 +12,19 @@
 <body>
     <div class="container">
         <div class="background-card">
-                <div class="card">
+                <div class="card green">
                     <h1>Green Tea</h1>
                     <img src="https://placedog.net/100/100/s" alt="a cup of tea">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor neque ut pellentesque lacinia.</p>
                     <p><span id="price">Price: </span>$3.70</p>
                 </div>
-                <div class="card">
+                <div class="card bop">
                     <h1>Broken Orange Pokoe Fannings</h1>
                     <img src="https://placedog.net/100/100/s" alt="a cup of tea">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor neque ut pellentesque lacinia.</p>
                     <p><span id="price">Price: </span>$5.00</p>
                 </div>
-                <div class="card">
+                <div class="card lemon">
                     <h1>Lemon and Ginger Tea</h1>
                     <img src="https://placedog.net/100/100/s" alt="a cup of tea">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor neque ut pellentesque lacinia. </p>
